feat (os): Novo status -> Na fila

--- a/src/public/service_orders/index.html
+++ b/src/public/service_orders/index.html
@@ -63,6 +63,7 @@
                         <option value="">Todos</option>
                         <option value="Em avaliação">Em avaliação</option>
                         <option value="Orçamento enviado">Orçamento enviado</option>
+                        <option value="Na fila">Na fila</option>
                         <option value="Em correções">Em correções</option>
                         <option value="Pendente">Pendente</option>
                         <option value="Finalizado">Finalizado</option>
