--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -81,6 +81,7 @@
                             <option disabled value="">Selecione uma opção</option>
                             <option value="Em avaliação">Em avaliação</option>
                             <option value="Orçamento enviado">Orçamento enviado</option>
+                            <option value="Na fila">Na fila</option>
                             <option value="Em correções">Em correções</option>
                             <option value="Pendente">Pendente</option>
                             <option value="Finalizado">Finalizado</option>
