--- a/src/public/projects/i.html
+++ b/src/public/projects/i.html
@@ -158,14 +158,16 @@
                                     </td>
                                     <td>
                                         <i
-                                            class="fa-solid fa-pen-to-square btn btn-sm text-primary"
+                                            class="fa-solid fa-pen-to-square"
                                             v-on:click="handlerEditSubproject(subproject.id)"
+                                            style="cursor: pointer"
                                         ></i>
                                     </td>
                                     <td>
                                         <i
-                                            class="fa-solid fa-trash btn btn-sm text-primary"
+                                            class="fa-solid fa-trash"
                                             v-on:click="handlerDeleteSubproject(subproject.id)"
+                                            style="cursor: pointer"
                                         ></i>
                                     </td>
                                 </tr>
@@ -201,14 +203,16 @@
                                     <td>{{check.return}}</td>
                                     <td>
                                         <i
-                                            class="fa-solid fa-pen-to-square btn btn-sm text-primary"
+                                            class="fa-solid fa-pen-to-square"
                                             v-on:click="handlerEditCheck(check.id)"
+                                            style="cursor: pointer"
                                         ></i>
                                     </td>
                                     <td>
                                         <i
-                                            class="fa-solid fa-trash btn btn-sm text-primary"
+                                            class="fa-solid fa-trash"
                                             v-on:click="handlerDeleteCheck(check.id)"
+                                            style="cursor: pointer"
                                         ></i>
                                     </td>
                                 </tr>
