fix: input number not accept float

--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -348,6 +348,7 @@
                                         class="form-control"
                                         id="value"
                                         v-model="payloads.protocolRegister.value"
+                                        step="0.01"
                                         required
                                     />
                                 </div>
@@ -403,6 +404,7 @@
                                         class="form-control"
                                         id="value"
                                         v-model="payloads.receipt.value"
+                                        step="0.01"
                                         required
                                     />
                                 </div>
@@ -500,6 +502,7 @@
                                         class="form-control"
                                         id="value"
                                         v-model="payloads.protocolProduct.value"
+                                        step="0.01"
                                         required
                                     />
                                 </div>
