--- a/src/public/products/i.html
+++ b/src/public/products/i.html
@@ -49,7 +49,7 @@
 
                     <div class="mb-3 col-lg">
                         <label for="value" class="form-label">Valor:</label>
-                        <input type="number" class="form-control" v-model="value" id="value" />
+                        <input type="number" class="form-control" v-model="value" id="value" step="0.01" />
                     </div>
                 </div>
 
