feat: Cancel on protocol status view

--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -98,6 +98,7 @@
                                     <option value="Em aberto">Em aberto</option>
                                     <option value="Liberado para pagamento">Liberado para pagamento</option>
                                     <option value="Fechado">Fechado</option>
+                                    <option value="Cancelado">Fechado</option>
                                 </select>
                             </div>
                         </div>
