feat: Full Report on Client

--- a/src/public/clients/i.html
+++ b/src/public/clients/i.html
@@ -135,7 +135,7 @@
 
             <div class="col border rounded p-2">
                 <div class="d-flex justify-content-between mb-2">
-                    <h5>Protocolos</h5>
+                    <h5>Relatório</h5>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-striped border">
