--- a/src/public/products/i.html
+++ b/src/public/products/i.html
@@ -54,8 +54,8 @@
                 </div>
 
                 <div class="mb-3 col-sm">
-                    <label for="profit" class="form-label">Lucro:</label>
-                    <input type="number" class="form-control" v-model="profit" id="profit" step="0.01" />
+                    <label for="coust" class="form-label">Custo:</label>
+                    <input type="number" class="form-control" v-model="coust" id="profit" step="0.01" />
                 </div>
             </div>
 
