fix: comment line to modal protocol product

--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -371,7 +371,7 @@
             </div>
         </div>
 
-        <!-- Modal Receipt -->
+        <!-- Modal Protocol Product  -->
         <div class="modal fade" id="protocolProductModal" tabindex="-1" aria-labelledby="protocolProductModalLabel"
             aria-hidden="true">
             <div class="modal-dialog">
