--- a/src/public/products/i.html
+++ b/src/public/products/i.html
@@ -59,12 +59,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" value="" id="generate_license"
-                        v-model="generate_license">
-                    <label class="form-check-label" for="generate_license">
-                        Gerar licença
-                    </label>
+                <div class="mb-3 col-sm">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="generate_license"
+                            v-model="generate_license">
+                        <label class="form-check-label" for="generate_license">
+                            Gerar licença
+                        </label>
+                    </div>
                 </div>
             </div>
             <button type="submit" class="btn btn-dark">Enviar</button>
