--- a/src/public/projects/index.html
+++ b/src/public/projects/index.html
@@ -1,84 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Codlinx - Projetos</title>
 
-        <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Codlinx - Projetos</title>
 
-        <script src="../assets/js/vue.min.js"></script>
-        <script src="../assets/js/jquery-3.6.1.min.js"></script>
-        <script src="../assets/js/bootstrap.min.js"></script>
-        <script src="../assets/js/axios.min.js"></script>
-        <script src="../assets/js/moment.min.js"></script>
-    </head>
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
 
-    <body>
-        <nav class="navbar bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="/dashboard">
-                    <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
-                </a>
+    <script src="../assets/js/vue.min.js"></script>
+    <script src="../assets/js/jquery-3.6.1.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/axios.min.js"></script>
+    <script src="../assets/js/moment.min.js"></script>
+</head>
+
+<body>
+    <nav class="navbar bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/dashboard">
+                <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
+            </a>
+        </div>
+    </nav>
+
+    <div class="container p-4" id="projects">
+        <div class="col">
+            <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
+            <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
+            <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
+            <a href="../subscriptions" class="btn btn-dark btn-sm my-2">Assinaturas</a>
+            <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
+            <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
+        </div>
+
+        <hr />
+
+        <div class="d-flex flex-wrap justify-content-between">
+            <div class="w-80">
+                <h5>Projetos</h5>
             </div>
-        </nav>
-
-        <div class="container p-4" id="projects">
-            <div class="col">
-                <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
-                <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
-                <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
-                <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
-                <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
-            </div>
-
-            <hr />
-
-            <div class="d-flex flex-wrap justify-content-between">
-                <div class="w-80">
-                    <h5>Projetos</h5>
-                </div>
-                <div class="w-15">
-                    <input
-                        type="search"
-                        class="form-control"
-                        placeholder="Pesquisar"
-                        v-model="q"
-                        v-on:keyup="handlerSearch"
-                    />
-                </div>
-            </div>
-
-            <div class="table-responsive m-2">
-                <table class="table table-striped border">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nome</th>
-                            <th scope="col">Tipo</th>
-                            <th scope="col">Cliente</th>
-                            <th scope="col">Abrir</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="project of projects">
-                            <th scope="row">{{project.id}}</th>
-                            <td>{{project.name}}</td>
-                            <td>{{project.type}}</td>
-                            <td>
-                                <a :href="'../clients/i?id='+project.Client.id">{{project.Client.name}}</a>
-                            </td>
-                            <td>
-                                <a :href="'../projects/i?id='+project.id"><i class="fa-solid fa-arrow-right"></i></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="w-15">
+                <input type="search" class="form-control" placeholder="Pesquisar" v-model="q"
+                    v-on:keyup="handlerSearch" />
             </div>
         </div>
 
-        <script src="../assets/js/projects/projects.js"></script>
-    </body>
+        <div class="table-responsive m-2">
+            <table class="table table-striped border">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Cliente</th>
+                        <th scope="col">Abrir</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="project of projects">
+                        <th scope="row">{{project.id}}</th>
+                        <td>{{project.name}}</td>
+                        <td>{{project.type}}</td>
+                        <td>
+                            <a :href="'../clients/i?id='+project.Client.id">{{project.Client.name}}</a>
+                        </td>
+                        <td>
+                            <a :href="'../projects/i?id='+project.id"><i class="fa-solid fa-arrow-right"></i></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script src="../assets/js/projects/projects.js"></script>
+</body>
+
 </html>
