--- a/src/public/servers/i.html
+++ b/src/public/servers/i.html
@@ -1,89 +1,92 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Codlinx - Servidor</title>
 
-        <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Codlinx - Servidor</title>
 
-        <script src="../assets/js/vue.min.js"></script>
-        <script src="../assets/js/jquery-3.6.1.min.js"></script>
-        <script src="../assets/js/bootstrap.min.js"></script>
-        <script src="../assets/js/axios.min.js"></script>
-        <script src="../assets/js/moment.min.js"></script>
-    </head>
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css" />
 
-    <body>
-        <nav class="navbar bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="/dashboard">
-                    <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
-                </a>
-            </div>
-        </nav>
+    <script src="../assets/js/vue.min.js"></script>
+    <script src="../assets/js/jquery-3.6.1.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/axios.min.js"></script>
+    <script src="../assets/js/moment.min.js"></script>
+</head>
 
-        <div class="container p-4" id="server">
-            <div class="col">
-                <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
-                <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
-                <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
-                <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
-                <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
-            </div>
+<body>
+    <nav class="navbar bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/dashboard">
+                <img src="../assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
+            </a>
+        </div>
+    </nav>
 
-            <hr />
-
-            <div class="d-flex justify-content-between">
-                <h5>Servidor #{{id}}</h5>
-                <div class="text-end" v-if="ClientId">
-                    <h6>Cliente proprietário: <a :href="'../clients/i?id='+ClientId">{{Client.name}}</a></h6>
-                </div>
-            </div>
-
-            <form v-on:submit="handlerSubmit">
-                <div class="row">
-                    <div class="mb-3 col-lg-6">
-                        <label for="description" class="form-label">Descrição:</label>
-                        <input type="text" class="form-control" v-model="description" id="description" required />
-                    </div>
-
-                    <div class="mb-3 col-lg">
-                        <label for="provider" class="form-label">Provedor:</label>
-                        <input type="text" class="form-control" v-model="provider" id="provider" required />
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="mb-3 col-lg">
-                        <label for="host" class="form-label">Host:</label>
-                        <input type="text" class="form-control" v-model="host" id="host" required />
-                    </div>
-
-                    <div class="mb-3 col-lg">
-                        <label for="username" class="form-label">Usuário:</label>
-                        <input type="text" class="form-control" v-model="username" id="username" />
-                    </div>
-
-                    <div class="mb-3 col-lg">
-                        <label for="password" class="form-label">Senha:</label>
-                        <input type="text" class="form-control" v-model="password" id="password" />
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="mb-3 col-lg">
-                        <label for="rsa" class="form-label">RSA:</label>
-                        <textarea class="form-control" v-model="rsa" id="rsa" rows="15"></textarea>
-                    </div>
-                </div>
-
-                <button type="submit" class="btn btn-dark">Enviar</button>
-            </form>
+    <div class="container p-4" id="server">
+        <div class="col">
+            <a href="../clients" class="btn btn-dark btn-sm my-2">Clientes</a>
+            <a href="../projects" class="btn btn-dark btn-sm my-2">Projetos</a>
+            <a href="../service_orders" class="btn btn-dark btn-sm my-2">Os</a>
+            <a href="../subscriptions" class="btn btn-dark btn-sm my-2">Assinaturas</a>
+            <a href="../servers/" class="btn btn-dark btn-sm my-2">Servidores</a>
+            <a href="../products" class="btn btn-dark btn-sm my-2">Produtos</a>
         </div>
 
-        <script src="../assets/js/servers/i.js"></script>
-    </body>
+        <hr />
+
+        <div class="d-flex justify-content-between">
+            <h5>Servidor #{{id}}</h5>
+            <div class="text-end" v-if="ClientId">
+                <h6>Cliente proprietário: <a :href="'../clients/i?id='+ClientId">{{Client.name}}</a></h6>
+            </div>
+        </div>
+
+        <form v-on:submit="handlerSubmit">
+            <div class="row">
+                <div class="mb-3 col-lg-6">
+                    <label for="description" class="form-label">Descrição:</label>
+                    <input type="text" class="form-control" v-model="description" id="description" required />
+                </div>
+
+                <div class="mb-3 col-lg">
+                    <label for="provider" class="form-label">Provedor:</label>
+                    <input type="text" class="form-control" v-model="provider" id="provider" required />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="mb-3 col-lg">
+                    <label for="host" class="form-label">Host:</label>
+                    <input type="text" class="form-control" v-model="host" id="host" required />
+                </div>
+
+                <div class="mb-3 col-lg">
+                    <label for="username" class="form-label">Usuário:</label>
+                    <input type="text" class="form-control" v-model="username" id="username" />
+                </div>
+
+                <div class="mb-3 col-lg">
+                    <label for="password" class="form-label">Senha:</label>
+                    <input type="text" class="form-control" v-model="password" id="password" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="mb-3 col-lg">
+                    <label for="rsa" class="form-label">RSA:</label>
+                    <textarea class="form-control" v-model="rsa" id="rsa" rows="15"></textarea>
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-dark">Enviar</button>
+        </form>
+    </div>
+
+    <script src="../assets/js/servers/i.js"></script>
+</body>
+
 </html>
